# noaa-nclimgrid

./: CHANGELOG.md  README.md  docker_env  environment.yml  setup.cfg  test_https_daily_post1970.tif  test_https_daily_pre1970.tif
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: file-list-daily-prelim.txt  file-list-daily-scaled.txt  file-list-monthly.txt
examples/Daily/: collection.json
examples/Daily/202201-grd-prelim-01/: 202201-grd-prelim-01.json  prcp-202201-grd-prelim-01.tif
examples/Monthly/: collection.json
examples/Monthly/nclimgrid-189501/: nclimgrid-189501.json  nclimgrid-tavg-189501.tif  nclimgrid-tmax-189501.tif  nclimgrid-tmin-189501.tif
examples/Monthly/nclimgrid-189502/: nclimgrid-189502.json  nclimgrid-prcp-189502.tif  nclimgrid-tavg-189502.tif  nclimgrid-tmax-189502.tif  nclimgrid-tmin-189502.tif
examples/cogs/: nclimgrid-prcp-189501.tif  tavg-202201-grd-prelim-01.tif
examples/daily/: collection.json
examples/daily-prelim/: collection.json
examples/daily-prelim/202201-grd-prelim-01/: 202201-grd-prelim-01.json  tmax-202201-grd-prelim-01.tif
examples/daily-scaled/: collection.json
examples/daily-scaled/202201-grd-scaled-01/: 202201-grd-scaled-01.json  prcp-202201-grd-scaled-01.tif  tavg-202201-grd-scaled-01.tif  tmax-202201-grd-scaled-01.tif  tmin-202201-grd-scaled-01.tif
examples/items/: 202201-grd-prelim-01.json  nclimgrid-189501.json  nclimgrid-189502.json
examples/monthly/: collection.json
scripts/: test
src/stactools/nclimgrid/: __init__.py  cog.py  (+4 more)
tests/: test_cog.py  test_commands.py  test_stac.py  test_utils.py
(+40 files in other folders)
