[metadata]
name = stactools-nclimgrid
version = attr: stactools.nclimgrid.__version__
description = stactools package for NClimGrid data
long_description = file: README.md
long_description_content_type = text/markdown
author = Preston Hartzell
author_email = preston.hartzell@gmail.com
url = https://github.com/stactools-packages/nclimgrid
project_urls =
    Issues = https://github.com/stactools-packages/nclimgrid/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    # stactools >= 0.3.1
    stactools @ git+https://github.com/stac-utils/stactools.git@c0b6737baefde054feb2da9e6473a70563ac3abd
    netCDF4 >= 1.6.0
    xarray >= 2022.3.0

[options.packages.find]
where = src
